--- a/src/App.css
+++ b/src/App.css
@@ -416,7 +416,7 @@ textarea::placeholder {
 .moonOverview p,
 .risingOverview p {
   color: var(--secondary-fg-color);
-  font-size: 0.7em;
+  font-size: 0.85em;
 }
 
 .bigThree {
@@ -438,6 +438,41 @@ textarea::placeholder {
   text-shadow: 2px 2px black;
 }
 
+.jumpToIntro {
+  width: 90%;
+  margin-left: 5%;
+  padding-left: 14px;
+  margin-bottom: 5px;
+}
+
+.jumpButtons {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  margin-left: 5%;
+  margin-bottom: 50px;
+}
+
+.jumpButtons a {
+  padding: 0px 8px 0px;
+  margin-left: 8px;
+  margin-right: 8px;
+  font-size: 0.85em;
+  background-color: var(--primary-fg-color);
+  border-radius: 10px;
+  border-color: var(--secondary-bg-color);
+  border-style: outset;
+  cursor: pointer;
+  width: 6%;
+  text-align: center;
+}
+
+.jumpButton p {
+  color: var(--secondary-fg-color);
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
 .otherSignsInfoBlock {
   display: grid;
   grid-template-columns: 2fr 1fr 2fr;
@@ -445,7 +480,7 @@ textarea::placeholder {
   align-items: center;
   width: 90%;
   margin-left: 5%;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 
 .otherSignsInfoBlockMid {
@@ -464,8 +499,8 @@ textarea::placeholder {
 
 .moonSignsInfoBlockText {
   grid-area: moon;
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 5%;
 }
 
 .moonSignsInfoBlockText h3,
@@ -475,13 +510,13 @@ textarea::placeholder {
 
 .risingSignsInfoBlockText {
   grid-area: rising;
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin-left: 5%;
 }
 
 .moonSignsInfoBlockText p,
 .risingSignsInfoBlockText p {
-  font-size: 0.7em;
+  font-size: 0.85em;
   text-align: center;
 }
 
@@ -513,14 +548,14 @@ textarea::placeholder {
   display: flex;
   column-gap: 20px;
   justify-content: center;
-  width: 60%;
-  margin-left: 20%;
+  width: 70%;
+  margin-left: 15%;
   text-align: center;
 }
 
 .moreInfo p {
-  margin: 2px;
-  font-size: 0.7em;
+  margin: 4px;
+  font-size: 0.85em;
   color: var(--secondary-fg-color);
 }
 
@@ -827,6 +862,18 @@ p {
   .indivStyle {
     width: 90%;
     margin-left: 5%;
+  }
+
+  .jumpButtons {
+    flex-wrap: wrap;
+  }
+
+  .jumpButtons a {
+    width: 30%;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 0px 0px 0px;
+    margin-bottom: 8px;
   }
 
   .signInfoBlockImage img {
@@ -1141,6 +1188,18 @@ p {
   .indivStyle {
     width: 90%;
     margin-left: 5%;
+  }
+
+  .jumpButtons {
+    flex-wrap: wrap;
+  }
+
+  .jumpButtons a {
+    width: 20%;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 0px 0px 0px;
+    margin-bottom: 8px;
   }
 
   .otherSignsInfoBlock {
